# metoxid

./: .gitignore  CMakeLists.txt  README.md  main  print.cpp
include/: metoxid.hpp
include/metoxid/: metadata.hpp  utils.hpp
src/: main.cpp  metadata.cpp  utils.cpp
test_images/: DudleyLeavittUtah.tiff
